fix(css): small text alignement fix

--- a/projet-web/src/App.css
+++ b/projet-web/src/App.css
@@ -181,6 +181,7 @@ h2 {
 .presentation > p {
   margin: 3% 2%;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .presentation > p br {
@@ -197,7 +198,6 @@ h2 {
 
   .presentation{
     flex-direction: column;
-    align-items: center;
   }
 
   .presentation > p{
